--- a/project001/template/module/menu-module.html
+++ b/project001/template/module/menu-module.html
@@ -4,13 +4,16 @@
  *
 */
 echo <<<EOF
-<nav>
+<nav class="menu-setting">
     <ul>
-        <li><a herf="#">menu001</a>
-        <li><a herf="#">menu002</a>
-        <li><a herf="#">menu003</a>
-        <li><a herf="#">menu004</a>
-        <li><a herf="#">menu005</a>
+        <li id="button">OPEN</li>
+    </ul>
+    <ul>
+        <li><a href="#">ホーム</a>
+        <li><a href="#">試合結果一覧</a>
+        <li><a href="#">チーム別成績</a>
+        <li><a href="#">投手別成績</a>
+        <li><a href="#">野手別成績</a>
     </ul>
 </nav>
 
