--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -1,14 +1,53 @@
 $color-white : #fff;
-$color-light-purple: rgba(68, 45, 76, 0.62);
+$color-light-gray: #a3aaad;
 $color-dark-purple: #2D122F;
-
+$color-link-blue: #49c8fd;
+$color-link-blue-dark: #2487b1;
+$color-bg-blue: #303740;
 $visual-filter: rgba(30, 30, 30, 0.15);
+$color-persbox : #2b4c71;
+
+
+/** action button **/
+@mixin linkbox{
+    background-color: $color-link-blue;
+	display: block;  
+    margin: 0 auto;
+    padding: 15px 0;
+    font-weight: bold;
+    width: 180px;
+    border-radius: 25px;
+	-moz-border-radius: 25px;
+	-webkit-border-radius: 25px;  
+}
+
+@mixin animation-btn{
+    -webkit-transition: all .3s ease-in-out;
+    -moz-transition: all .3s ease-in-out;
+    -ms-transition: all .3s ease-in-out;
+    -o-transition: all .3s ease-in-out;
+    transition: all .3s ease-in-out;
+}
+
+.action-button a{
+    @include linkbox;
+    
+    p{
+	    color: $color-white;
+    }
+}
+
+.action-button a:hover{
+    opacity: 0.8;
+    background-color: $color-link-blue-dark;
+    @include animation-btn;
+}
 
 
 /** headeer **/
 header{
-    
-    background-color: $color-light-purple;
+
+    top: 0;
     position: fixed;
     width: 100%;
     z-index: 10000;
@@ -21,7 +60,6 @@ header{
         
         h1,nav{
             display: table-cell;
-            text-transform: lowercase;
             font-size: 1.15em;
             color: $color-white;
             vertical-align: bottom;
@@ -31,26 +69,59 @@ header{
                 float: right;
                 
                 li,li a{
-                    font-size: 1.0em;
+                    font-size: 0.9em;
                     color: $color-white;
                     display: table-cell;
-                    padding-right:10px;
+                    padding-right:13px;
                 }
                 li a:hover{
-                    color: $color-dark-purple;
+                    color: $color-persbox;
                 }
                 
             }
+        }
+        
+        h1 a{
+            color: $color-white;
         }
         
     }
     
 }
 
+
+/* transition */
+#top-head{
+    transition: all 0.3s ease;
+    -webkit-transition: all 0.3s ease;
+    -moz-transition: all 0.3s ease;
+    -o-transition: all 0.3s ease;
+}
+
+/* Fixed */
+#top-head.fixed {
+    padding-top: 15px;
+    background: rgba(255,255,255,.7);
+    border-bottom: solid 1px $color-light-gray;
+    
+    h1, a{
+        color: $color-persbox;
+    }
+    a:hover{
+        opacity: 0.75;
+    }
+}
+
+#top-head.fixed:after {
+    width: 100%;
+    margin-top: 20px;
+}
+
+
 /** key_visual **/
 .key_visual{
     
-    background-image: url(/persbox/img/key_visual/home.jpg);
+    background-image: url(/persbox/img/key_visual/key-visual.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
@@ -64,19 +135,127 @@ header{
             width: 100%;
             
             .key_title{
-                padding-top: 22%;
+                padding-top: 16%;
                 
                 h1{
-                    
                     color: $color-white;
-                    font-size: 3.65em;
-                    line-height: 1.65em;
+                    font-size: 8.65em;
+                    line-height: 1.15em;
+                }
+                
+                h2{
+                    color: $color-white;
+                    font-size: 2.35em;
+                    line-height: 1.75em;
                 }
                 
                 p{
                     color: $color-white;
+                    line-height: 1.75em;
                 }
                 
+            }
+            
+            .action-button{
+                margin-top: 60px;    
+            }
+        }
+        
+}
+
+/** who we are **/
+.contents-who {
+    
+    background-image: url(/persbox/img/key_visual/about.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: block;
+    padding: 30px 1%;
+    width: 98%;
+    
+    .who-inside{
+        
+        height: 70vh;
+        display: table;
+        width: 60%;
+        margin: 0 auto;
+        padding: 100px 0;
+        
+        .who-text-area{
+            display: table-cell;
+            
+            h1{
+                font-size: 5.05em;
+                line-height: 1.00em;
+                padding-top: 15vh;
+                
+                .under-line {
+                    border-bottom: solid 6px;
+                    font-size: 1.00em;
+                    line-height: 2.00em;
+                    padding-bottom: 20px;
+                }
+            }
+            
+            p{
+                color: $color-light-gray;
+                padding-top: 25px;
+                line-height: 1.85em;
+            }
+        }
+    }
+    
+}
+
+
+/** works **/
+.contents-works{
+    background: $color-bg-blue;
+    display: block;
+    padding: 30px 1%;
+    width: 98%;
+    
+        .works-inside{
+            height: 77vh;
+            display: table;
+            width: 60%;
+            margin: 0 auto;
+            padding: 100px 0;
+            
+            .works-text-area{
+                text-align: center;
+            
+                h1{
+                    font-size: 5.05em;
+                    line-height: 1.00em;
+                    color: $color-white;
+                    padding-top: 8vh;
+                }
+            }
+        }
+}
+
+/** company **/
+.contents-company{
+    display: block;
+    padding: 30px 1%;
+    width: 98%;
+    
+        .company-inside{
+            height: 77vh;
+            display: table;
+            width: 60%;
+            margin: 0 auto;
+            padding: 100px 0;
+            
+            .company-text-area{
+                text-align: center;
+            
+                h1{
+                    font-size: 5.05em;
+                    line-height: 1.00em;
+                    padding-top: 8vh;
+                }
             }
         }
 }
