--- a/persbox/css/module/style.css
+++ b/persbox/css/module/style.css
@@ -8,7 +8,8 @@
   width: 180px;
   border-radius: 25px;
   -moz-border-radius: 25px;
-  -webkit-border-radius: 25px; }
+  -webkit-border-radius: 25px;
+  text-align: center; }
   .action-button a p {
     color: #fff; }
 
@@ -20,6 +21,12 @@
   -ms-transition: all .3s ease-in-out;
   -o-transition: all .3s ease-in-out;
   transition: all .3s ease-in-out; }
+
+.under-line {
+  border-bottom: solid 6px;
+  font-size: 1.00em;
+  line-height: 2.00em;
+  padding-bottom: 20px; }
 
 /** headeer **/
 header {
@@ -46,7 +53,9 @@ header {
           display: table-cell;
           padding-right: 13px; }
         header .global-menu h1 ul li a:hover, header .global-menu nav ul li a:hover {
-          color: #2b4c71; }
+          color: #2d3c4c; }
+    header .global-menu h1 {
+      padding-left: 1%; }
     header .global-menu h1 a {
       color: #fff; }
 
@@ -63,7 +72,7 @@ header {
   background: rgba(255, 255, 255, 0.7);
   border-bottom: solid 1px #a3aaad; }
   #top-head.fixed h1, #top-head.fixed a {
-    color: #2b4c71; }
+    color: #2d3c4c; }
   #top-head.fixed a:hover {
     opacity: 0.75; }
 
@@ -73,7 +82,7 @@ header {
 
 /** key_visual **/
 .key_visual {
-  background-image: url(/persbox/img/key_visual/key-visual.jpg);
+  background-image: url(/persbox/img/pers/img01.jpg);
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
@@ -105,13 +114,13 @@ header {
   background-image: url(/persbox/img/key_visual/about.jpg);
   background-size: cover;
   background-repeat: no-repeat;
+  background-position-y: 40px;
   display: block;
   padding: 30px 1%;
   width: 98%; }
   .contents-who .who-inside {
     height: 70vh;
     display: table;
-    width: 60%;
     margin: 0 auto;
     padding: 100px 0; }
     .contents-who .who-inside .who-text-area {
@@ -120,13 +129,7 @@ header {
         font-size: 5.05em;
         line-height: 1.00em;
         padding-top: 15vh; }
-        .contents-who .who-inside .who-text-area h1 .under-line {
-          border-bottom: solid 6px;
-          font-size: 1.00em;
-          line-height: 2.00em;
-          padding-bottom: 20px; }
       .contents-who .who-inside .who-text-area p {
-        color: #a3aaad;
         padding-top: 25px;
         line-height: 1.85em; }
 
@@ -139,16 +142,34 @@ header {
   .contents-works .works-inside {
     height: 77vh;
     display: table;
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     padding: 100px 0; }
     .contents-works .works-inside .works-text-area {
       text-align: center; }
       .contents-works .works-inside .works-text-area h1 {
         font-size: 5.05em;
-        line-height: 1.00em;
         color: #fff;
-        padding-top: 8vh; }
+        padding-top: 8vh;
+        border-bottom: solid 6px;
+        line-height: 1.0em;
+        padding-bottom: 20px;
+        width: 300px;
+        margin: 0 auto;
+        word-wrap: break-word; }
+  .contents-works .works-list-area {
+    margin-top: 100px; }
+    .contents-works .works-list-area ul {
+      width: 100%;
+      display: table; }
+      .contents-works .works-list-area ul li {
+        display: table-cell; }
+        .contents-works .works-list-area ul li figure {
+          width: 100%; }
+          .contents-works .works-list-area ul li figure img {
+            width: 100%; }
+      .contents-works .works-list-area ul li a:hover img {
+        opacity: 0.5; }
 
 /** company **/
 .contents-company {
@@ -158,7 +179,7 @@ header {
   .contents-company .company-inside {
     height: 77vh;
     display: table;
-    width: 60%;
+    width: 70%;
     margin: 0 auto;
     padding: 100px 0; }
     .contents-company .company-inside .company-text-area {
@@ -166,6 +187,145 @@ header {
       .contents-company .company-inside .company-text-area h1 {
         font-size: 5.05em;
         line-height: 1.00em;
-        padding-top: 8vh; }
+        margin: 0 auto;
+        width: 400px;
+        word-wrap: break-word; }
+  .contents-company .company-detail-area {
+    margin: 40px auto;
+    width: 60%; }
+    .contents-company .company-detail-area ul {
+      display: table;
+      width: 100%; }
+      .contents-company .company-detail-area ul li {
+        padding-bottom: 20px; }
+      .contents-company .company-detail-area ul dl {
+        display: table;
+        width: 100%; }
+        .contents-company .company-detail-area ul dl dt, .contents-company .company-detail-area ul dl dd {
+          display: table-cell; }
+        .contents-company .company-detail-area ul dl dt {
+          width: 40%; }
+  .contents-company .company-map-area ul {
+    display: table;
+    margin: 60px 0;
+    width: 100%; }
+    .contents-company .company-map-area ul li {
+      display: table-cell;
+      text-align: center; }
+      .contents-company .company-map-area ul li ul {
+        margin: 0 auto;
+        width: 90%; }
+        .contents-company .company-map-area ul li ul li {
+          display: table;
+          text-align: center;
+          width: 100%; }
+          .contents-company .company-map-area ul li ul li iframe {
+            width: 90%;
+            height: 300px; }
+        .contents-company .company-map-area ul li ul li:last-child {
+          margin-top: 40px; }
+
+/** footer **/
+footer {
+  height: 15vh;
+  background: #a3aaad;
+  text-align: center;
+  padding-top: 15vh;
+  width: 100%; }
+  footer li {
+    color: #fff; }
+
+/** lightbos setting**/
+div#lightbox-panel01,
+div#lightbox-panel02,
+div#lightbox-panel03,
+div#lightbox-panel04,
+div#lightbox-panel05,
+div#lightbox-panel06,
+div#lightbox-panel07,
+div#lightbox-panel08,
+div#lightbox-panel09,
+div#lightbox-panel10,
+div#lightbox-panel11,
+div#lightbox-panel12,
+div#lightbox-panel13 {
+  position: fixed;
+  top: 10vh;
+  left: 20%;
+  right: 20%;
+  z-index: 300000;
+  display: none; }
+
+div#lightbox-inside {
+  padding: 10px;
+  overflow: hidden;
+  clear: both; }
+
+div#lightbox-inside img {
+  width: 100%; }
+
+div#lightbox-panel ul {
+  width: 80%;
+  margin: 0 auto; }
+
+div#BlackWindow {
+  display: none;
+  background: black;
+  opacity: 0.7;
+  filter: alpha(opacity=70);
+  position: fixed;
+  top: 0px;
+  left: 0px;
+  min-width: 100%;
+  min-height: 100%;
+  z-index: 20000; }
+
+@media screen and (max-width: 768px) {
+  header h1 {
+    text-align: center; }
+  header nav, header ul {
+    display: none !important; }
+
+  .key_visual .key_title {
+    display: table;
+    height: 50vh;
+    width: auto;
+    text-align: center;
+    margin: 0 auto;
+    vertical-align: middle;
+    padding: 4%; }
+    .key_visual .key_title h1 {
+      font-size: 7.00em !important;
+      padding-top: 15%; }
+    .key_visual .key_title h2 {
+      font-size: 1.35em !important;
+      line-height: 1.45em !important; }
+
+  .contents-who {
+    background-position-y: 200px !important; }
+    .contents-who .who-inside {
+      height: 70vh !important;
+      display: table !important;
+      margin: 0 auto !important;
+      padding: 0px 5% 50% !important; }
+
+  .contents-works {
+    padding: 0px 1% !important; }
+    .contents-works .works-inside .works-list-area {
+      margin-top: 30px !important; }
+
+  .company-inside {
+    padding: 30px 0 !important; }
+    .company-inside h1 {
+      font-size: 3.05em !important;
+      width: auto !important; }
+    .company-inside .company-detail-area {
+      width: 100% !important; }
+    .company-inside .company-map-area ul li {
+      display: table !important; }
+      .company-inside .company-map-area ul li iframe {
+        width: 90% !important;
+        height: 25% !important;
+        margin-bottom: 30px !important; } }
 
 /*# sourceMappingURL=style.css.map */
