--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -5,7 +5,7 @@ $color-link-blue: #49c8fd;
 $color-link-blue-dark: #2487b1;
 $color-bg-blue: #303740;
 $visual-filter: rgba(30, 30, 30, 0.15);
-$color-persbox : #2b4c71;
+$color-persbox : #2d3c4c;
 
 
 /** action button **/
@@ -31,7 +31,7 @@ $color-persbox : #2b4c71;
 
 .action-button a{
     @include linkbox;
-    
+    text-align: center;
     p{
 	    color: $color-white;
     }
@@ -43,6 +43,13 @@ $color-persbox : #2b4c71;
     @include animation-btn;
 }
 
+
+.under-line {
+    border-bottom: solid 6px;
+    font-size: 1.00em;
+    line-height: 2.00em;
+    padding-bottom: 20px;
+}
 
 /** headeer **/
 header{
@@ -80,7 +87,9 @@ header{
                 
             }
         }
-        
+        h1{
+            padding-left: 1%;
+        }
         h1 a{
             color: $color-white;
         }
@@ -121,7 +130,7 @@ header{
 /** key_visual **/
 .key_visual{
     
-    background-image: url(/persbox/img/key_visual/key-visual.jpg);
+    background-image: url(/persbox/img/pers/img01.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     display: block;
@@ -169,6 +178,7 @@ header{
     background-image: url(/persbox/img/key_visual/about.jpg);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position-y: 40px;
     display: block;
     padding: 30px 1%;
     width: 98%;
@@ -177,7 +187,6 @@ header{
         
         height: 70vh;
         display: table;
-        width: 60%;
         margin: 0 auto;
         padding: 100px 0;
         
@@ -188,17 +197,9 @@ header{
                 font-size: 5.05em;
                 line-height: 1.00em;
                 padding-top: 15vh;
-                
-                .under-line {
-                    border-bottom: solid 6px;
-                    font-size: 1.00em;
-                    line-height: 2.00em;
-                    padding-bottom: 20px;
-                }
             }
             
             p{
-                color: $color-light-gray;
                 padding-top: 25px;
                 line-height: 1.85em;
             }
@@ -215,24 +216,55 @@ header{
     padding: 30px 1%;
     width: 98%;
     
-        .works-inside{
-            height: 77vh;
-            display: table;
-            width: 60%;
-            margin: 0 auto;
-            padding: 100px 0;
-            
-            .works-text-area{
-                text-align: center;
-            
-                h1{
-                    font-size: 5.05em;
-                    line-height: 1.00em;
-                    color: $color-white;
-                    padding-top: 8vh;
-                }
+    .works-inside{
+        height: 77vh;
+        display: table;
+        width: 70%;
+        margin: 0 auto;
+        padding: 100px 0;
+        
+        .works-text-area{
+            text-align: center;
+        
+            h1{
+                font-size: 5.05em;
+                color: #fff;
+                padding-top: 8vh;
+                border-bottom: solid 6px;
+                line-height: 1.0em;
+                padding-bottom: 20px;
+                width: 300px;
+                margin: 0 auto;
+                word-wrap: break-word;
             }
         }
+    }
+        
+    .works-list-area{
+        margin-top: 100px;
+        
+        ul{
+            width: 100%;
+            display: table;
+            
+            li{
+                display: table-cell;
+                
+                figure{
+                    width: 100%;
+                    
+                    img{
+                        width: 100%;
+                    }
+                }
+            }
+            
+            li a:hover img{
+                opacity: 0.5;
+            }
+            
+        }
+    }
 }
 
 /** company **/
@@ -244,18 +276,225 @@ header{
         .company-inside{
             height: 77vh;
             display: table;
-            width: 60%;
+            width: 70%;
             margin: 0 auto;
             padding: 100px 0;
             
             .company-text-area{
                 text-align: center;
-            
+                
                 h1{
                     font-size: 5.05em;
                     line-height: 1.00em;
-                    padding-top: 8vh;
+                    margin: 0 auto;
+                    width: 400px;
+                    word-wrap: break-word;
                 }
             }
         }
+        
+        .company-detail-area{
+            margin: 40px auto;
+            width: 60%;
+            
+            ul{
+                display: table;
+                width: 100%;
+                
+                li{
+                    padding-bottom: 20px;    
+                }
+                
+                dl{
+                    display: table;
+                    width: 100%;
+                    
+                    dt,dd{
+                        display: table-cell;
+                    }
+                    dt{
+                        width: 40%;
+                    }
+                }
+            }
+            
+        }
+        
+        .company-map-area{
+            
+            ul{
+                display: table;
+                margin: 60px 0;
+                width: 100%;
+                
+                li{
+                    display: table-cell;;
+                    text-align: center;
+                    
+                    ul{
+                        
+                        margin: 0 auto;
+                        width: 90%;
+                        
+                        li{
+                            display: table;
+                            text-align: center;
+                            width: 100%;
+                            
+                            iframe{
+                                width: 90%;
+                                height: 300px;
+                            }
+                        }
+                        
+                        li:last-child{
+                            margin-top: 40px;
+                        }
+                        
+                    }
+                    
+                }
+            }
+            
+        }
+}
+
+/** footer **/
+footer{
+    height: 15vh;
+    background: $color-light-gray;
+    text-align: center;
+    padding-top: 15vh;
+    width: 100%;
+    
+    li{
+        color: $color-white;
+    }
+}
+
+/** lightbos setting**/
+div#lightbox-panel01,
+div#lightbox-panel02,
+div#lightbox-panel03,
+div#lightbox-panel04,
+div#lightbox-panel05,
+div#lightbox-panel06,
+div#lightbox-panel07,
+div#lightbox-panel08,
+div#lightbox-panel09,
+div#lightbox-panel10,
+div#lightbox-panel11,
+div#lightbox-panel12,
+div#lightbox-panel13{ 
+    position: fixed;
+    top: 10vh;
+    left: 20%;
+    right: 20%;
+    z-index: 300000;
+	display: none;
+}
+
+
+div#lightbox-inside{ 
+    padding: 10px; 
+    overflow: hidden;
+    clear: both;
+}
+
+div#lightbox-inside img{ 
+    width: 100%;
+}
+
+div#lightbox-panel ul{ width: 80%; margin: 0 auto; }
+
+div#BlackWindow{ 
+    display:none; background:black; opacity:0.7;
+    filter:alpha(opacity=70);
+    position:fixed; top:0px;
+    left:0px; min-width:100%;
+    min-height:100%;
+    z-index:20000;
+}
+
+@media screen and (max-width: 768px) {
+
+header {
+    h1{
+        text-align: center; 
+    }
+    nav,ul{
+        display: none !important;
+    }
+}
+
+.key_visual{
+    
+    .key_title{
+            display: table;
+            height: 50vh;
+            width: auto;
+            text-align: center;
+            margin: 0 auto;
+            vertical-align: middle;
+            padding: 4%;
+        
+        h1{
+            font-size: 7.00em !important;
+            padding-top: 15%;
+        }
+        h2{
+            font-size: 1.35em !important;
+            line-height: 1.45em !important;
+        }
+    }
+}
+
+.contents-who{
+    
+    background-position-y: 200px !important;
+    
+    .who-inside{
+        height: 70vh !important;
+        display: table !important;
+        margin: 0 auto !important;
+        padding: 0px 5% 50% !important;
+    }
+}
+    
+.contents-works{
+    padding: 0px 1% !important;
+    
+    .works-inside{
+        .works-list-area{
+            margin-top: 30px !important;
+        }
+    }
+}    
+
+.company-inside{
+    padding: 30px 0 !important;
+    
+    h1{
+        font-size: 3.05em !important;
+        width: auto !important;
+    }
+    .company-detail-area{
+        width: 100% !important;
+    }
+    
+    .company-map-area{
+        ul{
+            li{
+                display: table !important;
+                
+                iframe{
+                    width: 90% !important;
+                    height: 25% !important;
+                    margin-bottom: 30px !important;
+                }
+            }
+        }
+    }
+}
+    
 }
