--- a/persbox2/css/module/style.scss
+++ b/persbox2/css/module/style.scss
@@ -58,6 +58,7 @@ header{
     position: fixed;
     width: 100%;
     z-index: 10000;
+    background-color:$color-link-blue;
     
     .global-menu{
         display: table;
