--- a/persbox2/css/module/style.css
+++ b/persbox2/css/module/style.css
@@ -52,7 +52,8 @@ header {
   top: 0;
   position: fixed;
   width: 100%;
-  z-index: 10000; }
+  z-index: 10000;
+  background-color: #3e5871; }
   header .global-menu {
     display: table;
     min-height: 36px;
