--- a/persbox2/css/module/style.scss
+++ b/persbox2/css/module/style.scss
@@ -54,11 +54,11 @@ $color-persbox : #2d3c4c;
 
 /** headeer **/
 header{
-
     top: 0;
     position: fixed;
     width: 100%;
     z-index: 10000;
+    background-color:$color-link-blue;
     
     .global-menu{
         display: table;
@@ -162,72 +162,8 @@ header{
                 p{
                     color: $color-white;
                     line-height: 1.75em;
-
-                }
-            }
-        }
-        
-        .company-detail-area{
-            margin: 40px auto;
-            width: 60%;
-            
-            ul{
-                display: table;
-                width: 100%;
-                
-                li{
-                    padding-bottom: 20px;    
                 }
                 
-                dl{
-                    display: table;
-                    width: 100%;
-                    
-                    dt,dd{
-                        display: table-cell;
-                    }
-                    dt{
-                        width: 40%;
-                    }
-                }
-            }
-            
-        }
-        
-        .company-map-area{
-            
-            ul{
-                display: table;
-                margin: 60px 0;
-                width: 100%;
-                
-                li{
-                    display: table-cell;;
-                    text-align: center;
-                    
-                    ul{
-                        
-                        margin: 0 auto;
-                        width: 90%;
-                        
-                        li{
-                            display: table;
-                            text-align: center;
-                            width: 100%;
-                            
-                            iframe{
-                                width: 90%;
-                                height: 300px;
-                            }
-                        }
-                        
-                        li:last-child{
-                            margin-top: 40px;
-                        }
-                        
-                    }
-                    
-                }
             }
             
             .action-button{
