--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -165,6 +165,10 @@ header{
 
                 }
             }
+            
+            .action-button{
+                margin-top: 60px;    
+            }
         }
         
         .company-detail-area{
