--- a/persbox/css/module/style.css
+++ b/persbox/css/module/style.css
@@ -116,14 +116,16 @@ header {
   background-size: cover;
   background-repeat: no-repeat;
   display: block;
-  height: 100vh; }
+  height: 100vh;
+  animation: bg-color 60s infinite;
+  -webkit-animation: bg-color 60s infinite; }
   .key_visual .key_inside {
-    background-color: rgba(41, 41, 41, 0.52);
+    background-color: rgba(40, 40, 40, 0.2);
     height: 100%;
     text-align: center;
     width: 100%; }
     .key_visual .key_inside .key_title {
-      padding-top: 20%; }
+      padding-top: 35vh; }
       .key_visual .key_inside .key_title h1 {
         color: #fff;
         font-size: 2.85em;
@@ -174,6 +176,52 @@ header {
   .key_visual .company-map-area .action-button {
     margin-top: 60px; }
 
+@-webkit-keyframes bg-color {
+  0% {
+    background-image: url(/persbox/img/pers/pers01.png); }
+  10% {
+    background-image: url(/persbox/img/pers/pers02.png); }
+  20% {
+    background-image: url(/persbox/img/pers/pers03.png); }
+  30% {
+    background-image: url(/persbox/img/pers/pers04.png); }
+  40% {
+    background-image: url(/persbox/img/pers/pers05.png); }
+  50% {
+    background-image: url(/persbox/img/pers/pers07.png); }
+  60% {
+    background-image: url(/persbox/img/pers/pers08.png); }
+  70% {
+    background-image: url(/persbox/img/pers/pers09.png); }
+  80% {
+    background-image: url(/persbox/img/pers/pers10.png); }
+  90% {
+    background-image: url(/persbox/img/pers/pers11.png); }
+  100% {
+    background-image: url(/persbox/img/pers/pers12.png); } }
+@keyframes bg-color {
+  0% {
+    background-image: url(/persbox/img/pers/pers01.png); }
+  10% {
+    background-image: url(/persbox/img/pers/pers02.png); }
+  20% {
+    background-image: url(/persbox/img/pers/pers03.png); }
+  30% {
+    background-image: url(/persbox/img/pers/pers04.png); }
+  40% {
+    background-image: url(/persbox/img/pers/pers05.png); }
+  50% {
+    background-image: url(/persbox/img/pers/pers07.png); }
+  60% {
+    background-image: url(/persbox/img/pers/pers08.png); }
+  70% {
+    background-image: url(/persbox/img/pers/pers09.png); }
+  80% {
+    background-image: url(/persbox/img/pers/pers10.png); }
+  90% {
+    background-image: url(/persbox/img/pers/pers11.png); }
+  100% {
+    background-image: url(/persbox/img/pers/pers12.png); } }
 /** who we are **/
 .contents-who {
   background-image: url(/persbox/img/key_visual/about.jpg);
@@ -316,7 +364,9 @@ div#lightbox-panel12,
 div#lightbox-panel13,
 div#lightbox-panel14,
 div#lightbox-panel15,
-div#lightbox-panel16 {
+div#lightbox-panel16,
+div#lightbox-panel17,
+div#lightbox-panel18 {
   position: fixed;
   top: 10vh;
   left: 20%;
@@ -361,9 +411,11 @@ div#BlackWindow {
     text-align: center;
     margin: 0 auto;
     vertical-align: middle;
-    padding: 4%; }
+    padding-left: 4%;
+    padding-right: 4%;
+    padding-top: 20vh !important; }
     .key_visual .key_title h1 {
-      font-size: 7.00em !important;
+      font-size: 3.00em !important;
       padding-top: 15%; }
     .key_visual .key_title h2 {
       font-size: 1.35em !important;
