--- a/persbox/css/module/style.css
+++ b/persbox/css/module/style.css
@@ -117,18 +117,20 @@ header {
   background-repeat: no-repeat;
   display: block;
   height: 100vh;
-  animation: bg-color 80s infinite;
-  -webkit-animation: bg-color 80s infinite; }
+  animation: bg-color 100s infinite;
+  -webkit-animation: bg-color 100s infinite; }
   .key_visual .key_inside {
-    background-color: rgba(40, 40, 40, 0.35);
+    background-color: rgba(40, 40, 40, 0.45);
     height: 100%;
     text-align: center;
     width: 100%; }
     .key_visual .key_inside .key_title {
       padding-top: 35vh; }
+      .key_visual .key_inside .key_title h1, .key_visual .key_inside .key_title p {
+        text-shadow: 1px 1px 15px rgba(44, 52, 68, 0.57); }
       .key_visual .key_inside .key_title h1 {
         color: #fff;
-        font-size: 3.65em;
+        font-size: 3.45em;
         line-height: 1.75em; }
       .key_visual .key_inside .key_title p {
         color: #fff;
@@ -263,9 +265,14 @@ header {
     margin-top: 100px; }
     .contents-works .works-list-area ul {
       width: 100%;
-      display: table; }
+      display: table;
+      table-layout: middle;
+      margin: 0px;
+      padding: 0px; }
       .contents-works .works-list-area ul li {
-        display: table-cell; }
+        display: table-cell;
+        margin: 0px;
+        padding: 0px; }
         .contents-works .works-list-area ul li figure {
           width: 100%; }
           .contents-works .works-list-area ul li figure img {
@@ -405,10 +412,11 @@ div#BlackWindow {
     padding-top: 20vh !important; }
     .key_visual .key_title h1 {
       font-size: 3.00em !important;
-      padding-top: 15%; }
-    .key_visual .key_title h2 {
-      font-size: 1.35em !important;
-      line-height: 1.45em !important; }
+      padding-top: 5vh;
+      line-height: 1.25em !important;
+      padding-bottom: 21px; }
+    .key_visual .key_title h1, .key_visual .key_title p {
+      text-align: left; }
 
   .contents-who {
     background-position-y: 200px !important; }
