--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -160,12 +160,12 @@ header{
     background-repeat: no-repeat;
     display: block;
     height: 100vh;
-    animation: bg-color 80s infinite;
-    -webkit-animation: bg-color 80s infinite;
+    animation: bg-color 100s infinite;
+    -webkit-animation: bg-color 100s infinite;
     
     
         .key_inside{
-            background-color: rgba(40, 40, 40, 0.35);
+            background-color: rgba(40, 40, 40, 0.45);
             height: 100%;
             text-align: center;
             width: 100%;
@@ -174,9 +174,13 @@ header{
             .key_title{
                 padding-top: 35vh;
                 
+                h1,p{
+                    text-shadow: 1px 1px 15px rgba(44, 52, 68, 0.57);
+                }
+                
                 h1{
                     color: $color-white;
-                    font-size: 3.65em;
+                    font-size: 3.45em;
                     line-height: 1.75em;
                 }
                 
@@ -353,9 +357,14 @@ header{
         ul{
             width: 100%;
             display: table;
+            table-layout: middle;
+            margin: 0px;
+            padding: 0px;
             
             li{
                 display: table-cell;
+                margin: 0px;
+                padding: 0px;
                 
                 figure{
                     width: 100%;
@@ -557,11 +566,12 @@ header {
         
         h1{
             font-size: 3.00em !important;
-            padding-top: 15%;
+            padding-top: 5vh;
+            line-height: 1.25em !important;
+            padding-bottom: 21px;
         }
-        h2{
-            font-size: 1.35em !important;
-            line-height: 1.45em !important;
+        h1,p{
+            text-align: left;
         }
     }
 }
