--- a/persbox/css/module/style.scss
+++ b/persbox/css/module/style.scss
@@ -69,8 +69,8 @@ header{
         h1{
             a{
                 figure{
-                    width: 100px;
-                    height: 40px;
+                    width: 160px;
+                    height: 50px;
                     background-image: url(/persbox/img/common/logo-w.png);
                     background-repeat: no-repeat;
                     display: block;
@@ -545,6 +545,10 @@ div#BlackWindow{
 header {
     h1{
         text-align: center; 
+            figure,image{
+                width: 100px;
+                height: 40px;
+            }
     }
     nav,ul{
         display: none !important;
